Make sure Tx type chips do not wrap.

--- a/src/assets/styles/explorer.css
+++ b/src/assets/styles/explorer.css
@@ -349,6 +349,7 @@ a {
     font-weight: 400;
     height: 20px;
     padding: 2px 8px;
+    text-wrap: nowrap;
 }
 
 .h-is-bold {
